Fix height issue on mobile

--- a/app/assets/stylesheets/map/views/layout.sass
+++ b/app/assets/stylesheets/map/views/layout.sass
@@ -12,7 +12,6 @@
     overflow: hidden
 
 .sya-panel
-  height: 100%
   overflow: hidden
   background: white
   flex-shrink: 0
@@ -26,6 +25,9 @@
     width: $panel-width-thin
     z-index: $z-panel
     box-shadow: $shadow-light
+
+    height: 100%
+    overflow-y: auto
 
   @include desktop-or-larger
     position: absolute
